# newPandas

./: pyproject.toml  requirements.txt
pandas/: pyproject.toml
pandas/src/pandas/: dataframe.py
pandas/tests/: test_dataframe.py
