[tool.poetry]
name = "newPandas"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tabulate = "^0.8.9"
beautifulsoup4 = "^4.10.0"
certifi = "^2021.10.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
